--- a/_sass/_plus_minus.scss
+++ b/_sass/_plus_minus.scss
@@ -4,27 +4,28 @@
     width: 17px;
 
     &:before,
-    &:after{
-        background: #fff;
-        content: '';
-        height: 5px;
-        left: 0;
-        position: absolute;
-        top: 50%;
-        width: 17px;
-        transition: transform 20ms ease;
+    &:after {
+      background: $white;
+      content: '';
+      height: 5px;
+      left: 0;
+      position: absolute;
+      top: 50%;
+      width: 17px;
+      transition: transform 20ms ease;
     }
 
     &:after {
-        transform-origin: center;
+      transform-origin: center;
     }
 }
 
 .collapsed .plus-minus-toggle {
-    &:after {
-        transform: rotate(90deg);
-    }
-    &:before {
-        transform: rotate(180deg);
-    }
+  &:after {
+    transform: rotate(90deg);
+  }
+
+  &:before {
+    transform: rotate(180deg);
+  }
 }
