--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -3,14 +3,12 @@
 
   a {
     background-color: $sk-green;
-    color: #fff;
     display: block;
     padding: $card-spacer-y $card-spacer-x;
 
     @include border-radius($card-border-radius-inner $card-border-radius-inner 0 0);
 
     &:hover {
-      color: #fff;
       background-color: darken($sk-green, 10%);
     }
 
@@ -19,12 +17,15 @@
     }
   }
   
-  h5{
+  h3 {
     display: flex;
-    align-items: all;
+    font-size: $font-size-h6;
+    font-weight: 700;
     justify-content: space-between;
     align-content: stretch;
     border-bottom: none !important;
+    margin-bottom: 0 !important;
+    color: $white;
   }
 
   .accordion-icon-plus{
