Update headers on project pages

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -2,6 +2,11 @@
   font-size: $header-display-1;
 }
 
+.header-page {
+  max-width: 90%;
+  color: $black;
+}
+
 .header-display-2 {
   font-size: $header-display-2;
 }
