--- a/_includes/project.html
+++ b/_includes/project.html
@@ -2,8 +2,8 @@
   <div class="project-case-study-row">
     <div class="project-case-study-col">
       <header class="project-case-study-header">
-        <h1 class="project-case-study-title-tag header-display-5">{{page.title_tag}}</h1>
-        <h1 class="project-case-study-title header-display-2">{{page.title}}</h1>
+        <div class="project-case-study-title-tag header-display-5">{{page.title_tag}}</div>
+        <h1 class="project-case-study-title header-display-1 header-page">{{page.title}}</h1>
       </header>
 
       <div class="project-case-study-content">
