Change narrative H2s to black

--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -159,7 +159,7 @@
 
   h2 {
     @extend %mb-3;
-    color: $brand-primary;
+    color: $black;
     font-size: $font-size-xx-large;
 
     &:not(:first-child) {
