--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -1,6 +1,9 @@
 .our-services {
   @extend %page-main-base;
-  @include container-fluid-base;
+  @extend %col-sm-11;
+  @extend %col-md-10;
+  @extend %col-lg-9;
+  @extend %mx-auto;
 }
 
 .service-areas-row {
