--- a/_sass/pages/_work.scss
+++ b/_sass/pages/_work.scss
@@ -3,7 +3,10 @@
 }
 
 .projects {
-  @include container-fluid-base;
+  @extend %col-sm-11;
+  @extend %col-md-10;
+  @extend %col-lg-9;
+  @extend %mx-auto;
 }
 
 .projects-row {
