--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -3,7 +3,10 @@
 }
 
 .blog-posts {
-  @include container-fluid-base;
+  @extend %col-sm-11;
+  @extend %col-md-10;
+  @extend %col-lg-9;
+  @extend %mx-auto;
 }
 
 .blog-posts-row {
