Reverts left aligned headers

--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -1,3 +1,8 @@
+%page-header-base {
+  @include container-fluid-base;
+  @extend %text-center;
+}
+
 .page-header-1 {
   @extend %my-7;
   @extend %my-md-8;
@@ -41,6 +46,7 @@
 .page-header-content-1 {
   @extend %page-header-content-base;
   @extend %mt-4;
+  @extend %text-center;
 }
 
 .page-header-content-2 {
