--- a/_sass/pages/_culture.scss
+++ b/_sass/pages/_culture.scss
@@ -3,10 +3,7 @@
 }
 
 .values {
-  @extend %col-sm-11;
-  @extend %col-md-10;
-  @extend %col-lg-9;
-  @extend %mx-auto;
+  @include container-fluid-base;
 }
 
 .values-row {
@@ -34,12 +31,12 @@
   border: 0;
   border-left: 14px solid $brand-primary;
   border-radius: 0;
-  box-sizing: border-box;
   height: 100%;
 }
 
 .value-block {
   @extend %card-block;
+  padding: .5rem 1.25rem 1.25rem;
 
   h3 {
     @extend %card-title;
