--- a/_sass/pages/_work.scss
+++ b/_sass/pages/_work.scss
@@ -3,10 +3,7 @@
 }
 
 .projects {
-  @extend %col-sm-11;
-  @extend %col-md-10;
-  @extend %col-lg-9;
-  @extend %mx-auto;
+  @include container-fluid-base;
 }
 
 .projects-row {
