--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -3,10 +3,7 @@
 }
 
 .blog-posts {
-  @extend %col-sm-11;
-  @extend %col-md-10;
-  @extend %col-lg-9;
-  @extend %mx-auto;
+  @include container-fluid-base;
 }
 
 .blog-posts-row {
