--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -20,11 +20,15 @@
 }
 
 .about-info-col {
-  @extend %narrative-col;
+  @extend %col-sm-11;
+  @extend %col-md-10;
+  @extend %col-lg-6;
+  @extend %mx-auto;
+  @extend %text-left;
 }
 
 .employees {
-  @extend %container-fluid;
+  @extend %wide-column;
 }
 
 .employees-row {
