fix accordion header bottom border

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -246,7 +246,7 @@ $form-icons-border-color: $gray-lightest;
 $form-icon-color: $form-icons-border-color;
 $form-icon-hover-color: $brand-primary;
 
-$btn-form-color: $body-color;
+$btn-form-color: $sk-grey;
 $btn-form-bg: $white;
 $btn-form-border: $btn-form-color;
 $btn-form-active-color: $brand-primary;
