--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -3,9 +3,10 @@
 }
 
 .about-skylight-img {
-  @include container-fluid-base;
+  @extend %col-sm-11;
+  @extend %col-lg-8;
+  @extend %mx-auto;
   @extend %img-fluid;
-  @extend %text-heavy-col-base;
   @include mb-7;
   @extend %mb-md-8;
   width: 100%;
@@ -21,8 +22,7 @@
 
 .about-info-col {
   @extend %col-sm-11;
-  @extend %col-md-10;
-  @extend %col-lg-6;
+  @extend %col-lg-8;
   @extend %mx-auto;
   @extend %text-left;
 }
