Adds a page header to join us for consistency

--- a/_includes/apply_form.html
+++ b/_includes/apply_form.html
@@ -126,7 +126,7 @@
     </fieldset>
   </fieldset>
 
-  <fieldset class="form-group">
+  <fieldset>
     <legend>Other information</legend>
 
     <div class="form-group">
@@ -157,7 +157,7 @@
     </div>
   </fieldset>
 
-  <div class="form-group">
-    <button type="submit">Submit</button>
+  <div class="form-group text-center">
+    <button class="btn btn-outline-primary btn-lg btn-width-md btn-cursor">Submit</button>
   </div>
 </form>
