Makes landing body width consistent

--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -42,7 +42,7 @@
 }
 
 .landing-body {
-  @extend %container-fluid;
+  @extend %wide-column;
   @extend %mt-5;
   @extend %mt-md-7;
   line-height: 1.5;
