Update policies, alliances, 404, and add bold to buttons

--- a/_sass/bootstrap/mixins/_buttons.scss
+++ b/_sass/bootstrap/mixins/_buttons.scss
@@ -51,6 +51,7 @@
   background-image: none;
   background-color: transparent;
   border-color: $color;
+  font-weight: 700;
 
   @include hover {
     color: $color-hover;
