Make buttons consistent

--- a/_includes/apply_form.html
+++ b/_includes/apply_form.html
@@ -158,6 +158,6 @@
   </fieldset>
 
   <div class="form-group text-center">
-    <button class="btn btn-outline-primary btn-lg btn-width-md btn-cursor">Submit</button>
+    <button class="btn-submit-outline">Submit</button>
   </div>
 </form>
