--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -153,6 +153,7 @@
 %btn-sm { @extend .btn-sm; }
 %btn-secondary { @extend .btn-secondary; }
 %btn-outline-secondary { @extend .btn-outline-secondary; }
+%btn-outline-primary { @extend .btn-outline-primary; }
 
 %card { @extend .card; }
 %card-img-top { @extend .card-img-top; }
