--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -149,9 +149,9 @@
 
 %text-heavy-col-base {
   @extend %col;
-  @extend %col-sm-10;
-  @extend %col-md-9;
-  @extend %col-lg-8;
+  @extend .col-md-11;
+  @extend .col-lg-10;
+  @extend .col-xl-8;
   @extend %mx-auto;
 }
 
