--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -149,10 +149,11 @@
 
 %text-heavy-col-base {
   @extend %col;
-  @extend .col-md-11;
-  @extend .col-lg-10;
-  @extend .col-xl-8;
+  @extend %col-sm-10;
+  @extend %col-md-9;
+  @extend %col-lg-8;
   @extend %mx-auto;
+  max-width: 940px;
 }
 
 %narrative-base {
