--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -136,7 +136,28 @@
 
 .landing-info-img {
   img {
-    @extend %img-fluid;
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
+    transform: scale(1);
+    transition: 0.05s all ease;
   }
 }
+
+@include media-breakpoint-up(lg) {
+  .landing-info-img {
+    img {
+      width: 130%;
+      margin: 0 -15%;
+    }
+  }
+}
+
+@include media-breakpoint-up(xl) {
+  .landing-info-img {
+    img {
+      width: 114%;
+      margin: 0 -7%;
+    }
+  }
+}
+
