--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -37,6 +37,7 @@
 %col-lg-9 { @extend .col-lg-9; }
 %col-lg-10 { @extend .col-lg-10; }
 %col-lg-11 { @extend .col-lg-11; }
+%col-xl-4 { @extend .col-xl-4; }
 
 %d-flex { @extend .d-flex; }
 %d-sm-flex { @extend .d-sm-flex; }
