Animates hamburger menu, speeds up display of menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,12 +4,12 @@
       <h1><a class="navbar-logo" href="/">Skylight</a></h1>
 
       <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#navbar-nav-collapsible" aria-controls="navbar-nav-collapsible" aria-expanded="false">
+        <div class="burger"><span></span></div>
         <span class="sr-only">Toggle Navigation</span>
-        <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
       </div>
     </div>
 
-    <div id="navbar-nav-collapsible" class="navbar-nav-collapsible">
+    <div id="navbar-nav-collapsible" class="collapse navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="/about/"><span>About</span></a></li>
         <li class="nav-item"><a class="nav-link" href="/services/"><span>Services</span></a></li>
