--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -23,38 +23,62 @@
 .navbar-toggler {
   @extend %align-self-center;
   @extend %p-0;
-  color: $nav-toggler-color;
+}
 
-  &:hover,
-  &:focus {
-    color: $nav-toggler-hover-color;
+.navbar-toggler[aria-expanded=true] {
+  .burger {
+    span {
+      background-color: transparent;
+
+      &:before, &:after {
+        top: 0;
+      }
+
+      &:before {
+        transform: rotate(45deg);
+      }
+
+      &:after {
+        transform: translateY(-8px) rotate(-45deg);
+        top: 8px;
+      }
+    }
   }
 }
 
-.can-touch {
-  .navbar-toggler {
-    &:hover {
-      color: $nav-toggler-color;
-    }
+.burger {
+  cursor: pointer;
+  padding: 8px 30px 14px 0px;
 
-    &:focus {
-      color: $nav-toggler-hover-color;
+  &:hover, &:focus {
+    span, span:before, span:after {
+      background-color: $nav-toggler-hover-color;
     }
   }
 
-  .navbar-toggler[aria-expanded='true'] {
-    color: $nav-toggler-hover-color;
+  span, span:before, span:after {
+    cursor: pointer;
+    border-radius: 10px;
+    height: 4px;
+    width: 30px;
+    background: $nav-toggler-color;
+    position: absolute;
+    display: inline-block;
+    content: '';
+    transition: all 150ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+  }
+
+  span:before {
+    top: -8px;
+  }
+
+  span:after {
+    bottom: -8px;
   }
 }
 
-.navbar-nav-collapsible {
-  @extend %collapse;
-  @extend %navbar-collapse;
+.navbar-collapse {
   @extend %justify-content-end;
-
-  &.collapse.show {
-    @extend %mt-3;
-  }
 }
 
 .nav-item {
@@ -89,5 +113,11 @@
       padding: 0 3px;
       background: transparent;
     }
+  }
+}
+
+@include media-breakpoint-down(sm) {
+  .navbar-nav {
+    padding-top: 20px;
   }
 }
