Adds multicolumn support

--- a/_includes/project.html
+++ b/_includes/project.html
@@ -34,17 +34,19 @@
               {% for member in page.project_members %}
                 {% assign emp = site.data.team | where: 'name', member | first %}
                 <li>
-                  {% if emp.active %}
-                    <a class="profile profile-link" href="{{emp.profile_path}}">
-                      <img class="profile-img" src="{{emp.image}}" alt="{{emp.image_description}}">
-                      <span>{{emp.short_name}}</span>
-                    </a>
-                  {% else %}
-                    <div class="profile">
-                      <img class="profile-img" src="{{emp.image}}" alt="{{emp.image_description}}">
-                      <span>{{emp.short_name}}</span>
-                    </div>
-                  {% endif %}
+                  <span class="approach-item">
+                    {% if emp.active %}
+                      <a class="profile profile-link" href="{{emp.profile_path}}">
+                        <img class="profile-img" src="{{emp.image}}" alt="{{emp.image_description}}">
+                        <span>{{emp.short_name}}</span>
+                      </a>
+                    {% else %}
+                      <div class="profile">
+                        <img class="profile-img" src="{{emp.image}}" alt="{{emp.image_description}}">
+                        <span>{{emp.short_name}}</span>
+                      </div>
+                    {% endif %}
+                  </span>
                 </li>
               {% endfor %}
             </ul>
@@ -57,7 +59,7 @@
           <aside class="approach">
             <ul>
               {% for tech in page.technologies %}
-                <li>{{tech}}</li>
+                <li><span class="approach-item">{{tech}}</span></li>
               {% endfor %}
             </ul>
           </aside>
@@ -69,7 +71,7 @@
           <aside class="approach">
             <ul>
               {% for practice in page.practices %}
-                <li>{{practice}}</li>
+                <li><span class="approach-item">{{practice}}</span></li>
               {% endfor %}
             </ul>
           </aside>
