--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -61,4 +61,8 @@
   &:hover {
     background-color: $brand-primary;
   }
+
+  &:active {
+    background-color: darken($brand-primary, 10%);
+  }
 }
