First draft of training page

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -53,6 +53,10 @@
 @mixin pt-5 { padding-top: 3rem !important; }
 @mixin pt-6 { padding-top: 4rem !important; }
 @mixin pb-6 { padding-bottom: 4rem !important; }
+@mixin pt-7 { padding-top: 5rem !important; }
+@mixin pb-7 { padding-bottom: 5rem !important; }
+@mixin pt-8 { padding-top: 6rem !important; }
+@mixin pb-8 { padding-bottom: 6rem !important; }
 @mixin pl-2 { padding-left: .5rem !important; }
 @mixin pl-5 { padding-left: 3rem !important; }
 @mixin pl-6 { padding-left: 4rem !important; }
