--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -10,6 +10,10 @@
   font-size: $header-display-2;
 }
 
+.header-display-3 {
+  font-size: $header-display-3;
+}
+
 .header-display-4 {
   font-size: $header-display-4;
 }
